29/2 - Frontend Design Demo
The frontend has been created, all the needed pages / links works.

--- a/DanskAkvakulturSolutions/BlazorServer/Pages/Index.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/Index.razor
@@ -1,5 +1,10 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<section class="landing-page">
+    <h1 class="fs-bold text-white text-uppercase">dansk akvakultur</h1>
+    <h2 class="fs-normal text-white text-uppercase">opdræt af fisk, skaldyr, tang og foder i international topklasse.</h2>
+</section>
 
-Welcome to your new app.
+<section class="footer">
+    <ButtonNavigation BtnText="Gå til Virtuel Simulation" Url="/virtual-simulation" />
+</section>
