--- a/DanskAkvakulturSolutions/BlazorServer/Pages/_Host.cshtml
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/_Host.cshtml
@@ -10,14 +10,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazorServer</title>
+
+    <title>Fisk er Fremtiden</title>
+
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/libs/bootstrap/css/bootstrap.min.css"/>
+
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorServer.styles.css" rel="stylesheet" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="Server" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
@@ -31,5 +34,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js"></script>
 </body>
 </html>
