--- a/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.Text
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -8,3 +9,4 @@
 @using Microsoft.JSInterop
 @using BlazorServer
 @using BlazorServer.Shared
+@using BlazorServer.Shared.Components
