--- a/DanskAkvakulturSolutions/BlazorServer/wwwroot/css/site.css
+++ b/DanskAkvakulturSolutions/BlazorServer/wwwroot/css/site.css
@@ -1,33 +1,51 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+h1 {
+    font-size: 4rem !important;
 }
 
-a, .btn-link {
-    color: #0366d6;
+h2 {
+    font-size: 0.9rem !important;
+}
+
+.fs-normal {
+    font-family: 'Open Sans', sans-serif !important;
+    font-weight: 400 !important;
+}
+
+.fs-semibold {
+    font-family: 'Open Sans', sans-serif !important;
+    font-weight: 600 !important;
+}
+
+.fs-bold {
+    font-family: 'Open Sans', sans-serif !important;
+    font-weight: 700 !important;
+}
+
+.text-white {
+    color: #ffffff !important;
 }
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #0590C7 !important;
+    border-color: #0590C7 !important;
 }
 
-.content {
-    padding-top: 1.1rem;
+.landing-page {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
 }
 
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
-.invalid {
-    outline: 1px solid red;
-}
-
-.validation-message {
-    color: red;
+.footer {
+    /* position: absolute; */
+    display: flex;
+    bottom: 30%;
+    left: 50%;
+    width: auto;
 }
 
 #blazor-error-ui {
@@ -48,3 +66,36 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+/* Transitions */
+button {
+    -webkit-transition: background-color 1s ease-out;
+    -moz-transition: background-color 1s ease-out;
+    -o-transition: background-color 1s ease-out;
+    transition: background-color 1s ease-out;
+}
+
+    button:after {
+        content: " ➜ ";
+        opacity: 0;
+        -webkit-transition: all 1s;
+        transition: all 1s;
+    }
+
+    button:hover {
+        background-color: #2FB457 !important;
+        border-color: #2FB457 !important;
+        -webkit-transition: all 1s;
+        transition: all 1s;
+    }
+
+    button:focus {
+        background-color: #2FB457 !important;
+        border-color: #2FB457 !important;
+        box-shadow: 0 0 0 0.25rem rgb(47 180 87 / 50%) !important;
+    }
+
+        button:hover:after {
+            opacity: 1;
+            color: #fff;
+        }
