28/3 - Injection of Game UI.
- Created a state of initialization towards the Unity Game Injection.
- JS file is loaded upon initialization of the page.
- UnityLoader is started, when the first render is called.
- Populated Startup with needed static file streams.
- Added demo.js til load the Unity Game.

--- a/DanskAkvakulturSolutions/BlazorServer/Pages/VirtualSimulation.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/VirtualSimulation.razor
@@ -1,6 +1,65 @@
 ﻿@page "/virtual-simulation"
 @layout GameLayout
 
-@code {
+<div id="unity-container" class="unity-desktop">
+    <canvas id="unity-canvas" width=960 height=600></canvas>
+    <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+            <div id="unity-progress-bar-full"></div>
+        </div>
+    </div>
+    <div id="unity-mobile-warning">
+        WebGL builds are not supported on mobile devices.
+    </div>
+    <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">FiskErFremtidenGameDemo</div>
+    </div>
+</div>
 
+@code {
+    [Inject] protected IJSRuntime JS { get; set; }
+
+    IJSObjectReference module;
+    string canvasDomID = "unity-canvas";
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            module = await JS.InvokeAsync<IJSObjectReference>("import", "./assets/demo/demo.js");
+        }
+        catch (Exception ex)
+        {
+            // Ignore.
+
+            Console.WriteLine($"Failed to load Demo: {ex.Message}");
+        }
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            if (module is null)
+            {
+                Console.WriteLine("Module is null.");
+
+                return;
+            };
+
+            try
+            {
+                await module.InvokeVoidAsync("unityLoader");
+            }
+            catch (Exception ex)
+            {
+                // Ignore.
+
+                Console.WriteLine(ex.Message);
+            }
+        }
+    }
 }
