--- a/DanskAkvakulturSolutions/BlazorServer/Pages/Index.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/Index.razor
@@ -6,5 +6,7 @@
 </section>
 
 <section class="footer">
-    <ButtonNavigation BtnText="Gå til Virtuel Simulation" Url="/virtual-simulation" />
+    <div class="shadow p-3 mb-4 rounded">
+        <ButtonNavigation BtnText="Gå til Virtuel Simulation" Url="/virtual-simulation" />
+    </div>
 </section>
