--- a/DanskAkvakulturSolutions/BlazorServer/Shared/NavMenu.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/Shared/NavMenu.razor
@@ -1,5 +1,7 @@
 ﻿<nav class="navbar navbar-light bg-white">
     <div class="container-fluid">
-        <ButtonNavigation BtnText="Gå til Forside" Url="/" />
+        <div class="shadow rounded">
+            <ButtonNavigation BtnText="Gå til Forside" Url="/" />
+        </div>
     </div>
 </nav>
