--- a/DanskAkvakulturSolutions/BlazorServer/Pages/_Host.cshtml
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/_Host.cshtml
@@ -36,6 +36,7 @@
     <script src="_framework/blazor.server.js"></script>
 
     <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/libs/jquery/jquery.min.js"></script>
     <script src="~/js/site.js"></script>
 </body>
 </html>
