--- a/DanskAkvakulturSolutions/BlazorServer/Shared/GameLayout.razor.css
+++ b/DanskAkvakulturSolutions/BlazorServer/Shared/GameLayout.razor.css
@@ -1,16 +1,4 @@
-﻿.game-layout {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-
-    /*position: absolute;
-    display: flex;
-    width: auto;*/
-}
-
-#unity-container {
+﻿/*#unity-container {
     position: relative;
 }
 
@@ -20,4 +8,12 @@
     display: flex;
     top: 0;
     left: 50%;
+}*/
+
+.game-layout {
+    /*position: fixed;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
