--- a/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Text
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
