--- a/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Text
 @using System.Net.Http
+@using Microsoft.Extensions.Logging;
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.AspNetCore.Components.Authorization
@@ -9,5 +10,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorServer
+@using BlazorServer.Data.Enums
+@using BlazorServer.Data.Services
 @using BlazorServer.Shared
 @using BlazorServer.Shared.Components
