--- a/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
@@ -11,6 +11,6 @@
 @using Microsoft.JSInterop
 @using BlazorServer
 @using BlazorServer.Data.Enums
-@using BlazorServer.Data.Services
+@using BlazorServer.Data.Services.Interfaces
 @using BlazorServer.Shared
 @using BlazorServer.Shared.Components
