Refreshed branch cache.

--- a/DanskAkvakulturSolutions/BlazorServer/Pages/VirtualSimulation.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/VirtualSimulation.razor
@@ -75,7 +75,7 @@
         {
             try
             {
-                module = await JS.InvokeAsync<IJSObjectReference>("import", "./assets/demo/demo.js");
+                module = await JS.InvokeAsync<IJSObjectReference>("import", "./assets/demo/game-build.js");
             }
             catch (Exception)
             {
