4/4 - Show Highscore button added

--- a/DanskAkvakulturSolutions/BlazorServer/wwwroot/css/site.css
+++ b/DanskAkvakulturSolutions/BlazorServer/wwwroot/css/site.css
@@ -44,7 +44,7 @@ h2 {
     position: absolute;
     display: flex;
     justify-content: center;
-    bottom: 10%;
+    margin-top: 20px;
     width: 100%;
 }
 
