--- a/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/_Imports.razor
@@ -13,3 +13,5 @@
 @using BlazorServer.Data.Enums
 @using BlazorServer.Shared
 @using BlazorServer.Shared.Components
+
+@using DataClassLibrary.Core.Events 
