--- a/DanskAkvakulturSolutions/BlazorServer/Pages/VirtualSimulation.razor
+++ b/DanskAkvakulturSolutions/BlazorServer/Pages/VirtualSimulation.razor
@@ -1,5 +1,6 @@
 ﻿@page "/virtual-simulation"
 @using DataClassLibrary.Simulation.Services.Interfaces
+@using DataClassLibrary.Core.Settings.Interfaces
 @layout GameLayout
 @implements IAsyncDisposable
 
@@ -54,6 +55,14 @@
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
+        @if (tempData is not null)
+        {
+            @foreach (var obj in tempData)
+            {
+                <p>@(obj)</p>
+            }
+        }
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Viverra nam libero justo laoreet sit amet cursus sit. Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Egestas integer eget aliquet nibh praesent tristique. Eu sem integer vitae justo eget. Integer quis auctor elit sed. Leo integer malesuada nunc vel risus commodo viverra maecenas. Egestas purus viverra accumsan in nisl. Interdum velit euismod in pellentesque massa. Convallis tellus id interdum velit laoreet id donec. Consequat ac felis donec et odio pellentesque. Et pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Ac auctor augue mauris augue neque gravida in. Morbi leo urna molestie at elementum eu facilisis. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. Ipsum suspendisse ultrices gravida dictum fusce ut.</p>
         <p>Faucibus nisl tincidunt eget nullam non nisi est. Sodales ut eu sem integer vitae justo. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Pulvinar sapien et ligula ullamcorper malesuada. Nisl condimentum id venenatis a condimentum vitae. Lacus sed viverra tellus in hac habitasse platea dictumst vestibulum. Habitasse platea dictumst vestibulum rhoncus est pellentesque. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra. Amet volutpat consequat mauris nunc congue nisi vitae suscipit. Eu volutpat odio facilisis mauris sit amet massa vitae. Pulvinar proin gravida hendrerit lectus. Sapien et ligula ullamcorper malesuada proin. Vel eros donec ac odio tempor orci. Ligula ullamcorper malesuada proin libero nunc. Tempor nec feugiat nisl pretium fusce id. Vel pretium lectus quam id. Purus sit amet volutpat consequat mauris nunc. Bibendum est ultricies integer quis auctor elit sed. Amet mauris commodo quis imperdiet. Amet consectetur adipiscing elit ut aliquam.</p>
         <p>Id diam vel quam elementum pulvinar etiam. Mi quis hendrerit dolor magna eget est lorem ipsum. Vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra. Dolor morbi non arcu risus quis varius. Id venenatis a condimentum vitae sapien pellentesque habitant. Id diam vel quam elementum. Senectus et netus et malesuada fames ac turpis egestas. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Sodales ut etiam sit amet nisl purus in mollis. Suspendisse potenti nullam ac tortor. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Lorem mollis aliquam ut porttitor leo a diam sollicitudin. Eu ultrices vitae auctor eu augue. Aliquam id diam maecenas ultricies. Viverra accumsan in nisl nisi scelerisque eu ultrices.</p>
@@ -85,7 +94,9 @@
     [Inject] protected ILogger<VirtualSimulation> Logger { get; set; }
     [Inject] protected IJSRuntime JS { get; set; }
     [Inject] protected ISimulationService SimulationService { get; set; }
+    [Inject] protected ISimulationSettings SimulationSettings { get; set; }
 
+    private List<object> tempData;
     private IJSObjectReference? module;
     private DotNetObjectReference<VirtualSimulation>? objRef;
     private string? result;
@@ -94,6 +105,8 @@
     protected override async Task OnInitializedAsync()
     {
         await SimulationService.ConnectAsync();
+
+        SimulationService.LeaderboardUpdated += OnLeaderboardUpdated;
 
         base.ShouldRender();
         base.StateHasChanged();
@@ -110,13 +123,22 @@
                 objRef = DotNetObjectReference.Create(this);
                 await JS.InvokeVoidAsync("setDotNetReference", objRef);
 
-                module = await JS.InvokeAsync<IJSObjectReference>("import", "./assets/demo/game-engine.js");
+                module = await JS.InvokeAsync<IJSObjectReference>("import", SimulationSettings.GameEnginePath);
             }
             catch (Exception)
             {
                 exceptionMessage = "Fejlede indlæsning af Core Engine.";
             }
         }
+    }
+
+    public void OnLeaderboardUpdated(object sender, LeaderboardUpdatedEventArgs e)
+    {
+        Logger.LogInformation($"Received data from {sender}.");
+
+        var data = e?.ScoreData;
+
+        StateHasChanged();
     }
 
     [JSInvokable("LeaderboardData")]
