--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/Pages/VirtualSimulation.razor
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/Pages/VirtualSimulation.razor
@@ -1,4 +1,4 @@
-﻿@page "/virtual-simulation" 
+﻿@page "/virtual-simulation"
 @layout GameLayout
 @implements IAsyncDisposable
 
@@ -8,10 +8,10 @@
 
 <ShowAlertMessage Message="@(exceptionMessage)" Alert="@(MessageAlert.Error)" />
 
-<ShowAlertMessage Message="@(result)" Alert="@(MessageAlert.Info)" />
+<ShowAlertMessage Message="@(gameEngineMessage)" Alert="@(MessageAlert.Info)" />
 
 <div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas" width=960 height=600></canvas>
+    <canvas id="unity-canvas" style="@(canvasCssStyle)"></canvas>
     <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -49,21 +49,11 @@
 @*Offcanvas*@
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasWithBackdrop" aria-labelledby="offcanvasWithBackdropLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">{{ AnimalName }}</h5>
+        <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">@(animalName)</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        @if (tempData is not null)
-        {
-            @foreach (var obj in tempData)
-            {
-                <p>@(obj)</p>
-            }
-        }
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Viverra nam libero justo laoreet sit amet cursus sit. Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Egestas integer eget aliquet nibh praesent tristique. Eu sem integer vitae justo eget. Integer quis auctor elit sed. Leo integer malesuada nunc vel risus commodo viverra maecenas. Egestas purus viverra accumsan in nisl. Interdum velit euismod in pellentesque massa. Convallis tellus id interdum velit laoreet id donec. Consequat ac felis donec et odio pellentesque. Et pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Ac auctor augue mauris augue neque gravida in. Morbi leo urna molestie at elementum eu facilisis. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. Ipsum suspendisse ultrices gravida dictum fusce ut.</p>
-        <p>Faucibus nisl tincidunt eget nullam non nisi est. Sodales ut eu sem integer vitae justo. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Pulvinar sapien et ligula ullamcorper malesuada. Nisl condimentum id venenatis a condimentum vitae. Lacus sed viverra tellus in hac habitasse platea dictumst vestibulum. Habitasse platea dictumst vestibulum rhoncus est pellentesque. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra. Amet volutpat consequat mauris nunc congue nisi vitae suscipit. Eu volutpat odio facilisis mauris sit amet massa vitae. Pulvinar proin gravida hendrerit lectus. Sapien et ligula ullamcorper malesuada proin. Vel eros donec ac odio tempor orci. Ligula ullamcorper malesuada proin libero nunc. Tempor nec feugiat nisl pretium fusce id. Vel pretium lectus quam id. Purus sit amet volutpat consequat mauris nunc. Bibendum est ultricies integer quis auctor elit sed. Amet mauris commodo quis imperdiet. Amet consectetur adipiscing elit ut aliquam.</p>
-        <p>Id diam vel quam elementum pulvinar etiam. Mi quis hendrerit dolor magna eget est lorem ipsum. Vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra. Dolor morbi non arcu risus quis varius. Id venenatis a condimentum vitae sapien pellentesque habitant. Id diam vel quam elementum. Senectus et netus et malesuada fames ac turpis egestas. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Sodales ut etiam sit amet nisl purus in mollis. Suspendisse potenti nullam ac tortor. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Lorem mollis aliquam ut porttitor leo a diam sollicitudin. Eu ultrices vitae auctor eu augue. Aliquam id diam maecenas ultricies. Viverra accumsan in nisl nisi scelerisque eu ultrices.</p>
+        @(animalData)
     </div>
 </div>
 
@@ -74,17 +64,30 @@
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <p>    1.                             1000000</p>
-        <p>    2.                             9000000</p>
-        <p>    3.                             8000000</p>
-        <p>    4.                             7000000</p>
-        <p>    5.                              600000</p>
-        <p>    6.                              500000</p>
-        <p>    7.                              400000</p>
-        <p>    8.                              300000</p>
-        <p>    9.                              200000</p>
-        <p>    10.                              10000</p>
-        <p>    MOCK SCORES</p>
+        @if (tempData is not null)
+        {
+            <table class="table table-sm table-borderless table-responsive caption-top">
+                <caption>
+                    <p></p>Senest opdateret:
+                    <p class="fs-6">@lastUpdated.ToString("f", CultureInfo.CreateSpecificCulture("da-DK"))</p>
+                </caption>
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Score</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var data in tempData.OrderByDescending(x => x.Score).Take(50))
+                    {
+                        <tr>
+                            <th>@data.ClientId</th>
+                            <td>@data.Score</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
     </div>
 </div>
 
@@ -95,21 +98,25 @@
     [Inject] protected ISimulationHubSettings SimulationSettings { get; set; }
 
     private List<IScore> tempData;
+    private DateTime lastUpdated;
+    private string animalName;
+    private string animalData;
     private IJSObjectReference? module;
     private DotNetObjectReference<VirtualSimulation>? objRef;
-    private string? result;
+    private string canvasCssStyle;
+    private string? gameEngineMessage;
     private string exceptionMessage;
 
     protected override async Task OnInitializedAsync()
     {
-        await SimulationService.ConnectAsync();
-
         SimulationService.LeaderboardUpdated += OnLeaderboardUpdated;
+        SimulationService.AnimalChoosen += OnPlayerChoosenAnimal;
 
+        await SimulationService.ConnectAsync();
         base.ShouldRender();
         base.StateHasChanged();
 
-        await StartEngine();
+        gameEngineMessage = await LoadGameEngine();
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -122,6 +129,8 @@
                 await JS.InvokeVoidAsync("setDotNetReference", objRef);
 
                 module = await JS.InvokeAsync<IJSObjectReference>("import", SimulationSettings.GameEnginePath);
+
+                canvasCssStyle = "width:100vh; height:auto; aspect-ratio: 16 / 9; cursor:default;";
             }
             catch (Exception)
             {
@@ -132,26 +141,22 @@
 
     public void OnLeaderboardUpdated(object sender, LeaderboardUpdatedEventArgs e)
     {
-        Logger.LogInformation($"Received data from {sender}.");
+        Logger.LogInformation($"Received data from {sender}, last updated: {e.DataSetUpdated}");
 
-        var data = e;
+        tempData = e?.ScoreData;
+        lastUpdated = e.DataSetUpdated;
 
         StateHasChanged();
     }
 
-    [JSInvokable("LeaderboardData")]
-    public async Task<bool> ReceiveLeaderboardAsync(float data)
+    private void OnPlayerChoosenAnimal(object sender, PlayerAnimalChoiceEventArgs e)
     {
-        if (data is 0) return false;
+        Logger.LogInformation($"Received animal data from {sender}.");
 
-        Logger.LogInformation($"Received Leaderboad information : {data}");
+        animalName = e?.AnimalName;
+        animalData = e?.Information.ToString();
 
-        return await SimulationService.UpdateLeaderboardAsync((decimal)data);
-    }
-
-    private async Task StartEngine()
-    {
-        result = await LoadGameEngine();
+        StateHasChanged();
     }
 
     public async ValueTask<string?> LoadGameEngine()
@@ -168,6 +173,26 @@
 
             return null;
         }
+    }
+
+    [JSInvokable("SetPlayerScoreData")]
+    public async Task<bool> SendScoreAsync(float data)
+    {
+        if (data is 0) return false;
+
+        Logger.LogInformation($"Received Leaderboad information : {data}");
+
+        return await SimulationService.UpdateLeaderboardAsync((decimal)data);
+    }
+
+    [JSInvokable("SetPlayerAnimalChoiceData")]
+    public async Task<bool> SendAnimalChoiceAsync(string name)
+    {
+        if (string.IsNullOrEmpty(name)) return false;
+
+        Logger.LogInformation($"Received Animal Choice : {name}");
+
+        return await SimulationService.UpdateAnimalInformationAsync(name);
     }
 
     async ValueTask IAsyncDisposable.DisposeAsync()
