--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/_Imports.razor
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Text
 @using System.Net.Http
+@using System.Globalization 
 @using Microsoft.Extensions.Logging;
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
