--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/Pages/_Host.cshtml
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/Pages/_Host.cshtml
@@ -14,10 +14,12 @@
     <title>Fisk er Fremtiden</title>
 
     <base href="~/" />
-    <link rel="stylesheet" href="~/libs/bootstrap/5.1.3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/libs/bootstrap/5.1.3/css/bootstrap.min.css" />
 
     <link href="css/site.css" rel="stylesheet" />
     <link href="DanskAkvakultur.dk.Web.styles.css" rel="stylesheet" />
+
+    <script src="https://kit.fontawesome.com/b85b760244.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <component type="typeof(App)" render-mode="Server" />
