--- a/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/_Imports.razor
+++ b/DanskAkvakultur.dk/DanskAkvakultur.dk.Web/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Text
+@using System.Linq;
 @using System.Net.Http
 @using System.Globalization 
 @using Microsoft.Extensions.Logging;
@@ -13,7 +14,8 @@
 @using DanskAkvakultur.dk.Web.Data.Enums
 @using DanskAkvakultur.dk.Web.Shared
 @using DanskAkvakultur.dk.Web.Shared.Components
-@using DanskAkvakultur.dk.DataAccess.Services.Abstrations
 @using DanskAkvakultur.dk.Shared.Events
 @using DanskAkvakultur.dk.Shared.Models.Score
+@using DanskAkvakultur.dk.Shared.Models.Information
 @using DanskAkvakultur.dk.Shared.Configurations.Abstractions
+@using DanskAkvakultur.dk.DataAccess.Services.Abstrations
